# latex-frontend

./: .gitignore  .gitmodules  Benchmark.code-workspace  Makefile  README.md  build.py  pyproject.toml
.cursor/rules/: uv-for-python.mdc
benchmark/: .gitignore  README.md  pyproject.toml
benchmark/core/: __init__.py  bench.py  cli.py  dashboard.py  metadata.py  run.py
benchmark/core/dataset/: __init__.py  clone_dataset.py  load_dataset.py
benchmark/core/score/: tool_use.py
benchmark/core/utils/: __init__.py  json_file_api.py  load_dataset.py  locate_server.py  metadata.py  read_json.py  run_params.py  server_api.py
benchmark/data/000-empty-section/: metadata.json  prompt.txt
benchmark/data/001-title-and-sections/: metadata.json  prompt.txt
benchmark/data/002-add-contents-to-section/: metadata.json  prompt.txt
benchmark/data/003-remove-contents-from-section/: main.tex  metadata.json  prompt.txt
benchmark/data/003-remove-contents-from-section/sections/: introduction.tex
benchmark/data/004-large-unarranged-doc/: main.tex  metadata.json  prompt.txt
cli/: main.py
cli/chat/: chatbot.py
cli/compiler/: compile.py
cli/project/: __init__.py  create.py  read.py
cli/project/templates/default/: main.tex
cli/settings/: __init__.py  common.py  fetch.py  first_run.py  nuke.py
clsi/: .gitignore  build-clsi.sh  docker-compose.yml
editor-cli/: README.md  pyproject.toml
editor-cli/api/: server.py
editor-cli/cli/: main.py  server.py
editor-cli/clsi/: build-clsi.sh  docker-compose.yml
editor-cli/core/: __init__.py
editor-cli/core/chat/: __init__.py  chatbot.py
editor-cli/core/compiler/: __init__.py  compile.py
editor-cli/core/project/: __init__.py  create.py
editor-cli/core/project/templates/: manifest.json
editor-cli/core/project/templates/default/: refs.bib
editor-cli/core/project/templates/ieee-two/: main.tex
editor-cli/core/project/templates/minimal/: main.tex
editor-cli/core/settings/: __init__.py  fetch.py  first_run.py  nuke.py
editor-gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
editor-gui/src/: App.tsx  index.css  main.tsx
editor-gui/src-tauri/: Cargo.toml  tauri.conf.json
editor-gui/src-tauri/capabilities/: default.json
editor-gui/src-tauri/src/: lib.rs
editor-gui/src/api/: client.ts  constants.ts
editor-gui/src/components/: accessibility-menu.tsx  ai-chat-input.tsx  ai-chat.tsx  ai-refine.tsx  code-editor.tsx  dashboard.tsx  file-browser.tsx  pdf-view.tsx  settings-menu.tsx  top-navigation.tsx
editor-gui/src/components/chat/: assistant-message.tsx  user-message.tsx
editor-gui/src/components/tool-calls/: move-attached-image-to-project-tool.tsx
editor-gui/src/components/ui/: prompt-input.tsx  resizable.tsx
editor-gui/src/contexts/: editor-context.tsx  image-for-ai-chat-context.tsx  theme-context.tsx
editor-gui/src/lib/: recent-projects.ts
editor-gui/src/pages/: editor.tsx  home.tsx  new-project.tsx  onboarding.tsx  select-dir.tsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  copilot-theme-overrides.css  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: auth-keys.ts  client.ts  constants.ts
frontend/src/components/: accessibility-menu.tsx  ai-chat.tsx  brand-logo.tsx  code-editor.tsx  dashboard.tsx  file-browser.tsx  pdf-page-indicator.tsx  pdf-view.tsx  pdf-zoom-button-group.tsx  recent-project-item.tsx  settings-menu.tsx  top-navigation.tsx  uploaded-image-item.tsx
frontend/src/components/ai-component-adapters/: input-view.tsx  message-view.tsx
frontend/src/components/ai-elements/: attachments.tsx  file-tree.tsx  tool.tsx
frontend/src/components/tool-calls/: compile-project-tool.tsx  edit-file-tool.tsx  list-files-tool.tsx  move-attached-image-to-project-tool.tsx  read-attached-image-tool.tsx  read-file-tool.tsx
frontend/src/components/ui/: prompt-input.tsx  resizable.tsx  tabs.tsx
frontend/src/contexts/: accessibility-context.tsx  auth-context.tsx  editor-context.tsx  image-for-ai-chat-context.tsx  settings-context.tsx  theme-context.tsx
frontend/src/lib/: auth.ts  recent-projects.ts
frontend/src/pages/: editor.tsx  new-project.tsx  onboarding.tsx  settings.tsx
gui/: main.py
gui/editor/: __init__.py  editor.py
gui/entrypoints/: __init__.py  first_run.py  project_selection.py
project-report/: SJSUthesis.cls  main.tex  refs.bib
project-report/appendices/: 1_system-prompt.tex
project-report/sections/: 1_introduction.tex  3_architecture.tex  4_implementation.tex
server/: .gitignore  README.md  pyproject.toml
server/api/: server.py
server/core/: __init__.py  agent.py  analytics.py  auth.py  local_tools.py  models.py  usage.py
sidecar/: README.md  pyproject.toml
sidecar/api/: server.py
sidecar/core/: __init__.py
sidecar/core/compiler/: compile.py
sidecar/core/project/: create.py  edit.py  image.py
sidecar/core/project/templates/: manifest.json
sidecar/core/project/templates/ieee-one/: main.tex
sidecar/core/project/templates/resume/: main.tex
sidecar/core/settings/: common.py  first_run.py  update.py
user-guide/: .gitignore  README.md  mkdocs.yml  pyproject.toml
user-guide/docs/: index.md  quick-start.md  uninstall.md
user-guide/docs/js/: tab-sync.js
