[project]
name = "latex-chatbot-cli"
version = "0.1.0"
description = "LaTeX Chatbot CLI - Interact with LaTeX chatbot services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
latex-chatbot = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
include = ["cli/project/templates/**"]
