[project]
name = "latex-chatbot-cli"
version = "1.0.0"
description = "LaTeX Chatbot CLI - Interact with LaTeX chatbot services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "flet[all]>=0.80.2",
    "platformdirs>=4.5.1",
    "pydantic-ai>=1.39.0",
    "tomlkit>=0.13.3",
]

[project.scripts]
latex-chatbot = "cli.main:cli"
latex-chatbot-gui = "gui.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "gui"]
include = ["core/project/templates/**"]
