[project]
name = "latex-chatbot-cli"
version = "1.0.0"
description = "LaTeX Chatbot CLI - Interact with LaTeX using a chatbot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "platformdirs>=4.5.1",
    "pydantic-ai-slim[openrouter]>=1.47.0",
    "tomlkit>=0.13.3",
    "genai_prices",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
latex-chatbot = "cli.main:cli"
latex-chatbot-server = "cli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core"]
include = ["core/project/templates/**"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
