[project]
name = "latex-chatbot-cli"
version = "1.0.0"
description = "LaTeX Chatbot Server - Interact with LaTeX using a chatbot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.5.1",
    "pydantic-ai-slim[ag-ui,openrouter]>=1.52.0",
    "tomlkit>=0.13.3",
    "genai_prices",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "copilotkit>=0.1.77",
]

[project.scripts]
latex-chatbot-server = "api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]
include = ["core/project/templates/**"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
