[project]
name = "spartan-write-server"
version = "1.0.0"
description = "spartan-write-server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.5.1",
    "genai_prices",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "copilotkit>=0.1.77",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
]

[project.scripts]
spartan-write-server = "api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]
